--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,12 @@
     font-weight: normal;
     font-style: normal;
 }
+
+body {
+    margin: 0;
+    padding: 2em;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
