--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,21 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.content-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 91.9vh;
+    margin: 0;
+    min-width: 1000px;
+    max-width: 1400px;
+    border: green 2px solid;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(7, 55, 20, 0.97);
+}
+
+.content-container .sign-up-container,
+.content-container .picture {
+    flex: 1;
+}
