--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,25 @@ body {
     max-width: 500px;
     border-radius: 8px 0 0 8px; 
 }
+
+.picture .logo {
+    position: relative;
+    top: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 7.5rem;
+}
+
+.picture img{
+    width: 5rem;
+}
+
+.picture h1{
+    color: #fff;
+    font-size: 4rem;
+    font-family: "NorseBold", sans-serif;
+    font-weight: bold;
+}
