--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,17 @@ body {
     font-family: "NorseBold", sans-serif;
     font-weight: bold;
 }
+
+.picture .pic-asset-recognition {
+    position: relative;
+    top: 40rem;
+    text-align: center;
+    width: 100%;
+    color: #ffffff;
+    font-size: 1.2rem;
+}
+
+.picture a{
+    color: rgba(255, 255, 255, 0.9);
+    font-family: sans-serif;
+}
