--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,12 @@ body {
     color: rgba(255, 255, 255, 0.9);
     font-family: sans-serif;
 }
+
+.content-container .sign-up-container {
+    min-width: 500px;
+    max-width: 900px;
+    margin-left: auto;
+    border-radius: 0 8px 8px 0;
+    height: 100%;
+    display: block;
+}
