--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,13 @@ body {
     height: 100%;
     display: block;
 }
+
+.sign-up-container .sign-up-form-header {
+    padding: 8rem 3rem 3rem 3rem;
+}
+
+.sign-up-form-header h2 {
+    width: 100%;
+    font-family: sans-serif;
+    font-size: 1.2rem;
+}
