--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,14 @@ body {
     font-family: sans-serif;
     font-size: 1.2rem;
 }
+
+.sign-up-container .sign-up-form {
+    background: #fff;
+    width: auto;
+    padding: 1rem 3rem;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: auto;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
