--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,14 @@ body {
     margin: auto;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
+
+.sign-up-form .header-text {
+    width: 100%;
+    margin: 0;
+}
+
+.header-text h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0;
+}
