--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,10 @@ body {
     font-weight: bold;
     margin: 0;
 }
+
+.sign-up-form .form-row {
+    flex: 1 1 45%;
+    display:flex;
+    flex-direction: column;
+    padding: 3px;
+}
