--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,9 @@ body {
     margin-bottom: 0.3rem;
     font-family: "Helvetica", sans-serif;
 }
+
+.form-row span {
+    display: none;
+    color: red;
+    font-size: 0.8rem;
+}
