--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,7 @@ input:invalid:not(:placeholder-shown) + span {
 input:invalid:not(:placeholder-shown) {
     border-color: red;
 }
+
+.sign-up-container .submission-container {
+    padding: 2rem 3rem;
+}
