--- a/styles.css
+++ b/styles.css
@@ -169,3 +169,16 @@ input:invalid:not(:placeholder-shown) {
 .sign-up-container .submission-container {
     padding: 2rem 3rem;
 }
+
+
+.submission-container .sign-up-btn {
+    border: none;
+    border-radius: 5px;
+    background: #596D48;
+    color: #fff;
+    height: 2.5rem;
+    width: 12rem;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
