--- a/styles.css
+++ b/styles.css
@@ -182,3 +182,16 @@ input:invalid:not(:placeholder-shown) {
     font-weight: bold;
     cursor: pointer;
 }
+
+.submission-container p {
+    height: 1.5rem;
+    font-size: 1.1rem;
+    margin-top: 1.8rem;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+.submission-container p a {
+    color: #596D48;
+    text-decoration: none;
+}
